# mmck-pfds

./: .travis.yml  ANNOUNCE  COPYING  Makefile.am  NEWS  README  README.md  README.vicare-scheme  acinclude.m4  configure.ac  configure.sh
doc/: Makefile.am  mmck-pfds.texi  pfds.texi
lib/: Makefile.am  compile-all.sps  config.scm.in  dependencies.make  libraries.scm  mmck.pfds.bbtrees.scm  mmck.pfds.coops.scm  mmck.pfds.deques.scm  mmck.pfds.dlists.scm  mmck.pfds.fingertrees.scm  mmck.pfds.heaps.scm  mmck.pfds.helpers.scm  mmck.pfds.lazy-lists.scm  mmck.pfds.private.coops.scm  mmck.pfds.private.helpers.scm  mmck.pfds.private.lazy-lists.scm  mmck.pfds.psqs.scm  mmck.pfds.queues.scm  mmck.pfds.scm  mmck.pfds.sequences.scm  mmck.pfds.sets.scm  mmck.pfds.version.scm
meta/travis-ci/: install-chicken-egg-simple-exceptions.sh
tests/: Makefile.am  test-bbtrees.scm  test-pfds-bbtree.sps  test-pfds-bbtrees.scm  test-pfds-deques.scm  test-pfds-deques.sps  test-pfds-dlists.scm  test-pfds-dlists.sps  test-pfds-docs.scm  test-pfds-fingertrees.scm  test-pfds-fingertrees.sps  test-pfds-heaps.scm  test-pfds-heaps.sps  test-pfds-psqs.scm  test-pfds-queues.scm  test-pfds-queues.sps  test-pfds-sequences.scm  test-pfds-sets.scm  test-pfds-sets.sps  test-pfds.sps  test-version.scm
tmp/: Makefile.am  README
tmp/tests/: test-pfds-bbtree.sps  test-pfds-deques.sps  test-pfds-dlists.sps  test-pfds-fingertrees.sps  test-pfds-psqs.sps  test-pfds-sequences.sps
